Fix menu bar items not showing in fullscreen

--- a/ui/scss/src/forms-engine.scss
+++ b/ui/scss/src/forms-engine.scss
@@ -99,8 +99,12 @@ div.xdsoft_datetimepicker {
   z-index: 1040 !important;
 }
 
-.tox.tox-tinymce:not(.tox-fullscreen) .tox-tinymce-aux {
+.tox-tinymce-aux {
   z-index: 1040 !important;
+}
+
+.tox-fullscreen .tox.tox-tinymce-aux, .tox-fullscreen~.tox.tox-tinymce-aux {
+  z-index: 1201 !important;
 }
 
 /*******************/
